crates/obj-rs/tests/derive_compile_fail/default_and_default_with.stderr
error: `default` / `default_with` declared twice on the same field
  --> tests/derive_compile_fail/default_and_default_with.rs:13:44
   |
13 |     #[obj(default = "standard".to_owned(), default_with = backfill)]
   |                                            ^^^^^^^^^^^^
